--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+}
+
+.container {
+  position: fixed;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.pentagon {
+  position: relative;
+  height: 500px;
+  width: 500px;
+  border: 1px dashed #ddd;
+}
+
+.vertice {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+}
+
+.dot {
+  height: 4px;
+  width: 4px;
+  background-color: orange;
+  position: absolute;
 }
