--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ p {
   width: 100%;
   align-items: center;
   justify-content: center;
+  background-color: lightblue;
 }
 
 .pentagon {
@@ -17,6 +18,7 @@ p {
   height: 500px;
   width: 500px;
   border: 1px dashed #ddd;
+  background-color: white;
 }
 
 .vertice {
@@ -30,6 +32,7 @@ p {
 .dot {
   height: 4px;
   width: 4px;
-  background-color: orange;
+  border-radius: 50%;
+  background-color: black;
   position: absolute;
 }
